# nsproxy-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: bypass.rs  config.rs  event_loop.rs  fake_dns.rs  fd_passing.rs  main.rs  namespace.rs  publish.rs  rule.rs  tun.rs
src/event_loop/: dns.rs  outbound.rs  published.rs
src/proxy/: direct.rs  http.rs  mod.rs  socks5.rs
