[package]
name = "nsproxy-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[[bin]]
name = "nsproxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "signal", "time"] }
smoltcp = { version = "0.12", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "socket-tcp", "socket-udp", "alloc", "log"] }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["sched", "mount", "ioctl", "socket", "user", "net", "fs", "signal", "process"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
libc = "0.2"
regex = "1"

[profile.release]
lto = true
strip = true
